<resources>
    <string name="app_name">Deal</string>
    <string name="title_home">Agenda</string>
    <string name="title_dashboard">Chats</string>
    <string name="title_notifications">Perfil</string>
    <string name="titulo">DEAL</string>
    <string name="bienvenida">Bienvenido Proveedor</string>
    <string name="telefono">Teléfono</string>
    <string name="contraseña">Contraseña</string>
    <string name="olvidar_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombres">Nombres(s)</string>
    <string name="usuario">Usuario</string>
    <string name="apellidos">Apellido(s)</string>
    <string name="confirmar_contraseña">Confirmar Contraseña</string>
    <string name="telefono_contacto">Teléfono de Contacto</string>
    <string name="cuenta_existente">¿Ya tienes una cuenta?</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="datos_generales">Datos generales</string>
    <string name="perfil">Perfil</string>

    <!-- PROVEEDOR -->
    <string name="titulo_registro_proveedor">Registro de proveedor</string>
    <string name="imagen_empresa">Imagen de la empresa</string>
    <string name="nombre_empresa">Nombre de la empresa</string>
    <string name="giro_empresa">Giro de la empresa</string>
    <string name="ubicacion">Ubicación</string>
    <string name="descripcion">Descripción</string>
    <string name="horario">Horario de atención</string>
    <string name="regresar">Regresar</string>
    <string name="continuar">Continuar</string>
    <string name="fecha_hora">Fecha y hora</string>
    <string name="servicio">Servicio</string>
    <string name="agenda">Agenda</string>
    <string name="agenda_pendiente">Citas pendientes</string>
    <string name="agenda_realizada">Citas realizadas</string>
    <string name="agenda_cancelada">Citas canceladas</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="cambiar_info">Cambiar información</string>
    <string name="guardar_info">Guardar información</string>
    <string name="chat">Chat</string>
    <string name="horario_laboral">Horario laboral</string>
    <string name="title_activity_mapa">Map</string>

    <string name="sobrenosotros">
        Sobre Nosotros
    </string>
    <string name="sobreDeal">Somos una empresa de tecnología que conecta el mundo físico y digital para hacer que el movimiento suceda con solo presionar un botón para todos, en todas partes. Porque creemos un mundo donde la satisfacción de una necesidad debería ser igualmente accesible para todos.</string>

</resources>