<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="mx.edu.utez.deal.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="mx.edu.utez.deal.ui.chat.ChatFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="mx.edu.utez.deal.ui.notifications.NotificationsFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_notifications" />
</navigation>