<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:orientation="vertical"
        tools:context=".Login.LoginScreen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="141dp"
                android:layout_height="118dp"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="10sp"
                android:src="@drawable/logoappointment"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:letterSpacing="0.2"
                android:paddingLeft="20dp"
                android:text="@string/titulo"
                android:textColor="@color/white"
                android:textSize="50dp"

                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/esquinas_redondeadas"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:letterSpacing="0.1"
                android:text="@string/registrarse"
                android:textColor="@color/secondary"
                android:textSize="40dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="28dp"
                android:paddingTop="20dp"
                android:text="@string/nombres"
                android:textColor="@color/secondaryDark"
                android:textSize="20sp"
                android:textStyle="bold"

                ></TextView>

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="28dp"
                android:paddingTop="20dp"
                android:text="@string/apellidos"
                android:textColor="@color/secondaryDark"
                android:textSize="20sp"
                android:textStyle="bold"></TextView>

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="28dp"
                android:paddingTop="20dp"
                android:text="@string/telefono"
                android:textColor="@color/secondaryDark"
                android:textSize="20sp"
                android:textStyle="bold"

                ></TextView>

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="28dp"
                android:paddingTop="20dp"
                android:text="@string/contraseña"
                android:textColor="@color/secondaryDark"
                android:textSize="20sp"
                android:textStyle="bold"

                ></TextView>

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="28dp"
                android:paddingTop="20dp"
                android:text="@string/confirmar_contraseña"
                android:textColor="@color/secondaryDark"
                android:textSize="20sp"
                android:textStyle="bold"

                ></TextView>

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="28dp"
                android:paddingTop="20dp"
                android:text="@string/telefono_contacto"
                android:textColor="@color/secondaryDark"
                android:textSize="20sp"
                android:textStyle="bold"

                ></TextView>

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary" />


            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/primary"
                android:text="@string/registrarse"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/cuenta_existente"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/volverIniciarSesion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/iniciar_sesion"
                    android:textColor="@color/primary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</ScrollView>