<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".proveedor.perfil.MenuPerfil">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="200dp"
            android:backgroundTint="@color/white"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="@color/primaryDark"
            android:text="@string/perfil"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:id="@+id/fotoChat"
            android:src="@mipmap/ic_logoDeal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/secondaryDark"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/primaryDark"
            android:layout_marginTop="10dp"
            android:text="@string/datos_generales"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/primaryDark"
            android:layout_marginTop="10dp"
            android:text="@string/horario_laboral"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_primary"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:text="@string/cerrar_sesion"/>

    </LinearLayout>

</LinearLayout>