<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".ui.notifications.NotificationsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="200dp"
            android:backgroundTint="@color/white"
            android:text="@string/perfil"
            android:textColor="@color/primaryDark"
            android:textSize="30dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/fotoChat"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:src="@drawable/logoappointment" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="@color/secondaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnDatosGenerales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:text="@string/datos_generales"
            android:textColor="@color/primaryDark" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/primaryDark"
            android:layout_marginTop="10dp"
            android:id="@+id/sobrenosotros"
            android:text="@string/sobrenosotros"/>

        <Button
            android:id="@+id/btnCerrarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/primaryDark"
            android:text="@string/cerrar_sesion"
            android:textColor="@color/white" />


    </LinearLayout>

</LinearLayout>