<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login.LoginScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:gravity="center"
                android:background="@color/primary"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/logoappointment"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/titulo"
                    android:textColor="@color/white"
                    android:textSize="70dp"
                    android:letterSpacing="0.2"
                    android:textStyle="bold" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/esquinas_redondeadas"
                android:gravity="center"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bienvenida"
                    android:textColor="@color/secondary"
                    android:textSize="40dp"
                    android:layout_marginTop="15dp"
                    android:letterSpacing="0.1"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usuario"
                    android:textSize="20sp"
                    android:textColor="@color/secondaryDark"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="28dp"
                    android:paddingTop="20dp"
                    android:textStyle="bold"

                    ></TextView>
                <EditText
                    android:layout_width="350dp"
                    android:id="@+id/lo_user"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/secondary"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contraseña"
                    android:textSize="20sp"
                    android:textColor="@color/secondaryDark"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="28dp"
                    android:textStyle="bold"
                    android:paddingTop="20dp"
                    ></TextView>
                <EditText
                    android:id="@+id/lo_password"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/secondary"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/olvidar_contraseña"
                    android:textSize="20sp"
                    android:textColor="@color/primary"
                    android:layout_gravity="center_vertical|end"
                    android:paddingRight="28dp"
                    android:paddingTop="20dp"
                    android:textStyle="bold"
                    ></TextView>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/primary"
                    android:textColor="@color/white"
                    android:text="@string/ingresar"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="¿No estás registrado?"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="5dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registrarse"
                        android:textColor="@color/primary"
                        android:textSize="20sp"
                        android:layout_marginTop="15dp"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        android:id="@+id/registrarse"
                        />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>

