<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Registro.RegistroProveedor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/primary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="141dp"
                android:layout_height="118dp"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="10sp"
                android:src="@drawable/logoappointment"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:letterSpacing="0.2"
                android:paddingLeft="20dp"
                android:text="@string/titulo"
                android:textColor="@color/white"
                android:textSize="50dp"

                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/esquinas_redondeadas"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="28dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imagen_empresa"
                    android:textSize="20sp"
                    android:textColor="@color/primaryDark"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    />
                <ImageButton
                    android:id="@+id/inputImagen"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:maxWidth="70dp"
                    android:maxHeight="70dp"
                    android:layout_marginLeft="70dp"
                    android:background="@drawable/boton_primary"
                    android:src="@drawable/logoappointment"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textSize="20sp"
                android:textColor="@color/secondaryDark"
                android:layout_gravity="center_vertical"
                android:paddingTop="20dp"
                android:textStyle="bold"

                ></TextView>
            <EditText
                android:id="@+id/re_username"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contraseña"
                android:textSize="20sp"
                android:textColor="@color/secondaryDark"
                android:layout_gravity="center_vertical"
                android:paddingTop="20dp"
                android:textStyle="bold"

                ></TextView>
            <EditText
                android:id="@+id/re_password"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_empresa"
                android:textSize="20sp"
                android:textColor="@color/secondaryDark"
                android:layout_gravity="center_vertical"
                android:paddingTop="20dp"
                android:textStyle="bold"

                ></TextView>
            <EditText
                android:id="@+id/re_name"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono_contacto"
                android:textSize="20sp"
                android:textColor="@color/secondaryDark"
                android:layout_gravity="center_vertical"
                android:paddingTop="20dp"
                android:textStyle="bold"

                ></TextView>
            <EditText
                android:id="@+id/re_phone"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/giro_empresa"
                android:textSize="20sp"
                android:textColor="@color/secondaryDark"
                android:layout_gravity="center_vertical"
                android:paddingTop="20dp"
                android:textStyle="bold"

                ></TextView>
            <EditText
                android:id="@+id/re_area"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:textSize="20sp"
                android:textColor="@color/secondaryDark"
                android:layout_gravity="center_vertical"
                android:paddingTop="20dp"
                android:textStyle="bold"

                ></TextView>
            <EditText
                android:id="@+id/re_descripcion"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horario"
                android:textSize="20sp"
                android:textColor="@color/secondaryDark"
                android:layout_gravity="center_vertical"
                android:paddingTop="20dp"
                android:textStyle="bold"

                ></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:layout_marginRight="100dp"
                    android:text="Desde" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:text="Hasta" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/re_startTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/primaryDark"
                    android:layout_marginRight="50dp"
                    android:hint="10:00 p. m." />

                <EditText
                    android:id="@+id/re_finalTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/primaryDark"
                    android:hint="12:00 p. m." />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp"
                >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="100dp"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/primaryDark"
                    android:id="@+id/backLogin"
                    android:text="@string/regresar"/>

                <Button
                    android:id="@+id/btn_pro_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boton_primary"
                    android:textColor="@color/white"
                    android:text="@string/continuar"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</ScrollView>